# radstract

./: .gitignore  README.md  pyproject.toml
.github/workflows/: gh-pages.yml  lint-and-test.yml  pypi-release.yml
examples/: _test.py
examples/analysis/: shapedistro.py
examples/data/: colors.py  data_conversions.py  dicom_creation.py  dicom_import.py  filters.py  models.py  nifti_creation.py  nifti_import.py
examples/dataset/: create_datasets.py
examples/math/: smart_intersection.py
examples/visuals/: dicom_pdf_example.py  report_generation.py
radstract/: __init__.py  testdata.py
radstract/analysis/: __init__.py
radstract/analysis/shapedistro/: __init__.py  plots.py
radstract/analysis/shapedistro/models/: README.md  __init__.py  a3.py  common.py  d2.py
radstract/data/: __init__.py  colors.py  models.py  multimodal.py
radstract/data/dicom/: __init__.py  brightness_crop.py  exports.py  main.py  utils.py  validator.py
radstract/data/images/: __init__.py  filters.py  utils.py
radstract/data/nifti/: __init__.py  main.py
radstract/datasets/: __init__.py  huggingface.py  nnunet.py  polygon.py  polygon_utils.py  utils.py
radstract/math/: __init__.py  main.py
radstract/visuals/: __init__.py  report_generator.py  report_utils.py
scripts/: whitelist.py
tests/: _test_gen_data.py  conftest.py
tests/intergration/: test_datasets_intergration.py  test_dicom_intergration.py  test_models_intergration.py  test_multimodal_intergration.py  test_report_generator_dicom_intergration.py
tests/unit/analysis/: test_shapedistro_models.py  test_shapedistro_plot.py
tests/unit/data/: test_color.py  test_dicom.py  test_dicom_exports.py  test_images.py  test_multimodal.py  test_niftis.py
tests/unit/datasets/: test_huggingface.py  test_nnunet_json.py  test_polygon_utils.py  test_utils.py
tests/unit/math/: test_math.py
tests/unit/visuals/: test_dicom_pdf_generation.py  test_report_generator.py
tools/: license.py
